@@ -18,6 +18,8 @@ Changes in @NEW@:
       datatype of STRING instead of TEXT. This has been fixed. (CNY-2013)
     * Fixed bug that made the repository code return incomplete data
       for the getPackageBranchPathIds call in certain situations. (CNY-2810)
+    * Derived packages created from an unmodified shadow now choose
+      the correct binary from which to derive. (CNY-2776)
 
   o Build Changes:
     * Removed defaultBasePackages configuration option as well as the
